@@ -10,6 +10,8 @@ To Do:
 - key bindings
 - key binding scripting
 - add alerts to SZ & THERM plugins
+- add subgroups to groups ability
+
 
 Maybe some day:
 ===============
